--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
+@font-face {
+  font-family: "SuisseIntl-Regular";
+  src: url(./SuisseIntl-Regular.ttf) format("truetype");
+}
+
+
+
 body {
   padding: 0;
   box-sizing: border-box;
   margin: 0;
+  font-family: "SuisseIntl-Regular";
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,4 +20,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+    /* font-family: "SuisseIntl-Regular"; */
 }
