--- a/src/style.css
+++ b/src/style.css
@@ -39,26 +39,6 @@
   letter-spacing: 2px;
 }
 
-.glitch {
-  font-size: 50px;
-  font-weight: bold;
-  color: black;
-  position: relative;
-  animation: glitch 1s infinite;
-}
-
-@keyframes glitch {
-  0% {
-    text-shadow: 2px 2px purple;
-  }
-  50% {
-    text-shadow: -2px -2px rgb(192, 116, 192);
-  }
-  100% {
-    text-shadow: 2px 2px rgb(230, 182, 230);
-  }
-}
-
 /* Hero */
 .hero-div {
   position: relative;
@@ -75,11 +55,20 @@
 }
 
 .hero-text-h1 {
+  /* position: relative; */
   width: 50vw;
   font-size: 4.1vw;
   color: black;
   font-weight: bolder;
   z-index: 2;
+}
+
+.spalshing-video {
+  width: 100px;
+  height: auto;
+  vertical-align: middle; /* keeps it aligned with text */
+  border-radius: 8px;
+  margin: 0 10px;
 }
 
 .btn {
@@ -104,6 +93,7 @@
 }
 
 .hero-text-para {
+  color: #4d4c4c;
   width: 35vw;
   font-size: 1.2rem;
 }
@@ -327,7 +317,7 @@ nav {
 .slider-main-div {
   background-color: #d2aef4;
   padding-top: 2.5rem;
-  padding-bottom: 12rem;
+  padding-bottom: 5rem;
 }
 
 .image_wrapper {
@@ -344,14 +334,14 @@ nav {
 }
 
 .slider-text-heading {
-  font-size: 4rem;
+  font-size: 2.8rem;
   text-align: center;
   margin-bottom: 3rem;
   font-weight: bolder;
 }
 
 .slider-text-div {
-  margin-top: 10rem;
+  margin-top: 5rem;
 }
 
 .slider-text-para {
@@ -387,7 +377,7 @@ nav {
 }
 
 .feature-text-heading {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 
@@ -436,7 +426,7 @@ nav {
 
 /* Team card */
 .teamcard-main-div {
-  margin-top: 100px;
+  margin-top: 0px;
 }
 
 .teamcard-para {
@@ -452,27 +442,71 @@ nav {
   margin-bottom: 2.5rem;
 }
 
-.teamcard-img {
-  background-color: #d2aef4;
+.teamcard {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 70px;
+}
+
+.teamcard-body {
+  position: relative;
   width: 300px;
-  height: 400px;
-  border-radius: 0.5rem;
+  height: 360px;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  transition: 0.2s ease-out;
+  transition: transform 0.3s ease;
 }
 
-.teamcard-img:hover {
-  transform: scale(1.1);
+.teamcard-body:hover {
+  transform: scale(1.05);
 }
 
-.teamcard-name {
-  width: 200px;
-  text-align: center;
-  background-color: black;
+.teamcard-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 16px;
+  transition: opacity 0.4s ease;
+}
+
+/* Overlay */
+.teamcard-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.4s ease;
+}
+
+/* Show overlay when hover */
+.teamcard-body:hover .teamcard-overlay {
+  opacity: 1;
+}
+
+/* Button */
+.teamcard-btn {
+  background-color: purple;
   color: white;
-  padding: 8px;
-  min-width: 250px;
-  margin-inline: auto;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 8px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.teamcard-btn:hover {
+  background-color: rgb(223, 41, 223);
+  transform: scale(1.1);
 }
 
 /* TattooCategory */
@@ -504,7 +538,7 @@ nav {
 }
 
 .tattoocategory-img {
-  height: 300px;
+  height: 350px;
   width: 300px;
   border-radius: 15px;
   /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); */
@@ -575,9 +609,10 @@ nav {
 }
 
 .service-card {
+  position: relative;
   padding: 30px;
   width: 18%;
-  height: 250px;
+  height: 300px;
   border-radius: 0.8rem;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
@@ -603,6 +638,21 @@ nav {
   font-size: 0.9rem;
   line-height: 1.4;
   color: rgb(98, 95, 95);
+}
+
+.service-card-btn {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  justify-content: center;
+  position: absolute;
+  width: 75%;
+  height: 8%;
+  bottom: 18px;
+  border-radius: 0.5rem;
+  background-color: black;
+  color: white;
+  border: none;
 }
 
 /* Background-video */
@@ -631,7 +681,7 @@ nav {
   transform: translate(-50%, -50%);
   text-align: center;
   color: black;
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
@@ -653,17 +703,23 @@ nav {
 }
 
 /* Appointment form */
+
 .form-group {
   position: relative;
   margin-bottom: 1.2rem;
 }
 
+.form-group select:focus {
+  border-color: black;
+  outline: none;
+}
+
 .form-group input,
-.form-group textarea {
+.form-group select {
   width: 100%;
   padding: 12px 12px 12px 12px;
   font-size: 16px;
-  border: 1px solid #ccc;
+  border: 1px solid gray;
   outline: none;
   background: transparent;
 }
@@ -680,9 +736,9 @@ nav {
 }
 
 .form-group input:focus + label,
-.form-group input:not(:placeholder-shown) + label,
-.form-group textarea:focus + label,
-.form-group textarea:not(:placeholder-shown) + label {
+.form-group input:valid + label,
+.form-group select:focus + label,
+.form-group select:valid + label {
   top: -5px;
   left: 45px;
   font-size: 13px;
@@ -705,7 +761,7 @@ nav {
 .form-error {
   background-color: #fff;
   color: red;
-  font-size: 0.8rem;
+  font-size: 0.72rem;
   text-align: start;
   padding: 0 40px;
 }
@@ -738,30 +794,24 @@ nav {
 }
 
 .form-field input,
-.form-container textarea {
-  max-width: 300px;
-  min-width: 300px;
+.form-field select {
+  max-width: 350px;
   padding: 12px;
   /* margin: 10px 0; */
   border: 1.59px solid gray;
   border-radius: 5px;
   font-size: 1rem;
   outline: none;
+  box-sizing: border-box;
 }
 
-.form-container textarea {
-  min-height: 30px;
-  max-height: 80px;
-}
-
-.form-container input:focus,
-.form-container textarea:focus {
+.form-container input:focus {
   border-color: black;
 }
 
 /* Submit Button */
 .form-container button {
-  width: 325px;
+  width: 350px;
   background: black;
   color: white;
   border: none;
@@ -782,7 +832,7 @@ nav {
 
 @media (max-width: 500px) {
   .form-container {
-    width: 95%;
+    width: 80%;
   }
 
   .form-group label {
@@ -790,13 +840,17 @@ nav {
     left: 30px;
   }
 
-  .form-group input:focus + label,
-  .form-group input:not(:placeholder-shown) + label,
-  .form-group textarea:focus + label,
-  .form-group textarea:not(:placeholder-shown) + label {
+  .form-container button {
+    width: 312px;
+  }
+
+  .form-group input:valid + label,
+  .form-group select:focus + label,
+  .form-group select:valid + label {
     top: -5px;
-    left: 25px;
-    font-size: 12px;
+    left: 30px;
+    font-size: 13px;
+    color: #333;
   }
 
   .form-error {
@@ -809,7 +863,7 @@ nav {
   margin-top: 12vh;
   background-color: #d2aef4;
   width: 100%;
-  height: 120vh;
+  height: 110vh;
 }
 
 .about-heading {
@@ -867,7 +921,7 @@ nav {
 }
 
 .artist-wrapper .heading {
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .artist-wrapper p {
@@ -940,17 +994,20 @@ nav {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  background-color: #c48afa;
+  padding: 80px 50px;
+  border-radius: 10px;
 }
 
 .contact-form input,
-.contact-form textarea {
+.contact-form select {
   padding: 13px;
   border: 1px solid gray;
-  max-width: 94%;
   border-radius: 0.5rem;
 }
 
 .contact-form button {
+  margin-top: 30px;
   padding: 12px;
   background-color: black;
   color: white;
@@ -962,7 +1019,7 @@ nav {
 }
 
 .contact-form-error {
-  background-color: #fff;
+  background-color: #c48afa;
   color: red;
   font-size: 0.8rem;
   text-align: start;
@@ -1065,8 +1122,8 @@ footer {
   background-color: #c48afa;
   border-radius: 50%;
   position: fixed;
-  bottom: 3rem;
-  right: 3rem;
+  bottom: 7rem;
+  right: 1.6rem;
   z-index: 999;
   display: flex;
   justify-content: center;
@@ -1085,4 +1142,158 @@ footer {
   100% {
     transform: translateY(0.5rem);
   }
+}
+
+/* Studio slider */
+.swiper {
+  width: 100%;
+  height: 600px;
+}
+
+.studio-slider {
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.swiper-slide {
+  width: 45%;
+  height: 90%;
+  text-align: center;
+  font-size: 18px;
+  background: #444;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+/* Testimonial */
+.testimonial-main-div {
+  background-color: #efeff3;
+}
+
+.testimonial-section {
+  color: black;
+  padding: 80px 20px;
+  text-align: center;
+}
+
+.testimonial-section .title {
+  font-size: 2.4rem;
+}
+
+.testimonial-card {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  background: whitesmoke;
+  border: 1px solid #cecbcb;
+  padding: 30px 50px;
+  border-radius: 16px;
+  /* box-shadow: 0 20px 50px rgba(210, 174, 244, 0.1); */
+  box-shadow: 1px 3px 36px -9px rgba(0, 0, 0, 0.46);
+  transition: all 0.3s ease;
+  text-align: left;
+}
+
+.testimonial-header {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.client-photo {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 3px solid gray;
+}
+
+.client-details {
+  flex: 1;
+}
+
+.client-detail-text {
+  color: gray;
+}
+
+.client-name {
+  font-size: 1.6em;
+  font-weight: 600;
+  color: black;
+  margin: 30px 0 -15px;
+}
+
+.stars {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+.stars .stars-rating {
+  color: gold;
+  font-size: 1.5em;
+  margin: 0;
+}
+
+.rating-text {
+  color: gray;
+}
+
+.testimonial-text {
+  font-size: 1.1em;
+  line-height: 1.6;
+  color: rgb(68, 68, 68);
+  font-style: italic;
+  margin-bottom: 25px;
+}
+
+.carousel-buttons {
+  position: absolute;
+  bottom: 35px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.carousel-buttons button {
+  background-color: black;
+  color: white;
+  padding: 10px 18px;
+  font-size: 1.5em;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: 0.3s ease all;
+}
+
+.carousel-buttons button:hover {
+  background-color: whitesmoke;
+  color: #000;
+}
+
+/* Whatsapp logo */
+.whatsapp-icon {
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+  position: fixed;
+  bottom: 15px;
+  right: 5px;
+  z-index: 1000;
+  transition: transform 0.3s ease;
+}
+
+.whatsapp-icon:hover {
+  transform: scale(1.1);
 }
