--- a/src/mediaQuery.css
+++ b/src/mediaQuery.css
@@ -41,6 +41,24 @@
     align-items: start;
   }
 
+  .nav-call-btn {
+    display: none;
+  }
+
+  .call-btn-for-mobile {
+    display: block;
+    background-color: white;
+    border: none;
+    margin-left: 70%;
+    cursor: pointer;
+    color: #333;
+    transition: color 0.3s ease, transform 0.3s ease;
+  }
+  .call-btn-for-mobile:hover {
+    color: purple;
+    transform: scale(1.1); /* Slight zoom effect */
+  }
+
   .services-submenu {
     top: 260px;
   }
@@ -527,8 +545,9 @@
   }
 
   .teamcard-img {
-    width: 100%;
-    height: 390px;
+    width: 320px;
+    height: 320px;
+    border-radius: 50%;
   }
 
   .teamcard-btn {
@@ -660,8 +679,13 @@
   }
 
   /* Contact Us */
+  .contact-form {
+    padding: 60px 30px;
+    border-radius: 10px;
+  }
+
   .contact-section {
-    padding-top: 100px;
+    margin-top: -2vh;
   }
 
   .contact-heading {
@@ -701,78 +725,21 @@
   }
 
   /* Testimonial */
-  .testimonial-section {
-    padding: 40px 20px;
+  .testimonial-heading {
+    font-size: 2rem;
+    margin-bottom: 30px;
   }
 
-  .testimonial-section .title {
-    font-size: 1.7rem;
-  }
-  .testimonial-card {
-    width: 100%;
-    height: 350px;
-    padding: 20px 1px;
-  }
-
-  .testimonial-header {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    margin: 10px 35px;
-  }
-
-  .client-photo {
-    width: 65px;
-    height: 65px;
-  }
-
-  .client-name {
-    margin: 4px 0 5px;
-    font-size: 1.3em;
-  }
-
-  .client-detail-text {
-    font-size: 0.9em;
-  }
-
-  .stars {
-    margin: 10px 35px;
-    justify-content: start;
-    gap: 1.5rem;
-  }
-
-  .stars .stars-rating {
-    font-size: 1.2rem;
-  }
-  .rating-text {
-    font-size: 0.9rem;
-  }
-
-  .testimonial-text {
-    font-size: 0.95em;
-    text-align: center;
-    line-height: 1.5;
-    margin: 10px 35px;
-  }
-
-  .carousel-buttons {
-    position: relative;
-    bottom: auto;
-    left: auto;
-    transform: none;
-    margin-top: 20px;
-  }
-
-  .carousel-buttons button {
-    padding: 8px 14px;
-    font-size: 1.2em;
+  .testimonial-box {
+    width: 325px;
+    height: 450px;
   }
 
   /* Goto Top button */
   .top-btn {
     width: 55px;
     height: 55px;
-    bottom: 6rem;
+    bottom: 5.5rem;
     right: 1.2rem;
   }
 
@@ -780,5 +747,67 @@
   .whatsapp-icon {
     width: 80px;
     height: 80px;
+  }
+
+  /* Portfolio 1 */
+  .portfolio1-main-div {
+    margin-top: 15vh;
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+  }
+
+  .portfolio1-img-div img {
+    margin-top: 20px;
+    border-radius: 20px;
+    width: 100%;
+    height: 400px;
+    border: 3px solid white;
+  }
+
+  .portfolio1-text {
+    margin-top: 0rem;
+  }
+
+  .portfolio1-text h1 {
+    font-size: 2.4rem;
+  }
+
+  .portfolio1-text h2 {
+    font-size: 1.4rem;
+    margin-top: -10px;
+  }
+
+  .portfolio1-text p {
+    font-size: 1rem;
+  }
+
+  .social-media-icon {
+    width: 35px;
+    margin-bottom: 20px;
+  }
+
+  /* Terms */
+  .term-wrapper-div {
+    margin-top: 15vh;
+    margin-bottom: 10vh;
+  }
+
+  .term-wrapper-div h1 {
+    font-size: 28px;
+  }
+
+  /* Privacy-Policy */
+  .privacy-wrapper-div {
+    margin-top: 15vh;
+    margin-bottom: 10vh;
+  }
+
+  .privacy-wrapper-div h1 {
+    font-size: 28px;
+  }
+
+  .privacy-wrapper-div h2 {
+    font-size: 23px;
   }
 }
