--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 :root {
   --padding-inline-section: 20px;
   --trans: all 0.3s linear;
+  --margin-top: 20vh;
 }
 
 .container {
@@ -202,7 +203,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 10rem;
+  width: 0rem;
 }
 
 .navbar-logo img {
@@ -322,11 +323,14 @@ nav {
 
 .image_wrapper {
   margin: 15px;
+  display: inline-block;
+  cursor: pointer;
 }
 
 .image_wrapper img {
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.8);
+  display: block;
 }
 
 .image_wrappe img:hover {
@@ -435,6 +439,7 @@ nav {
   font-weight: bold;
   font-size: 2rem;
 }
+
 .teamcard-header {
   text-align: center;
   font-weight: bold;
@@ -446,67 +451,100 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 70px;
+  gap: 5rem;
 }
 
 .teamcard-body {
-  position: relative;
-  width: 300px;
-  height: 360px;
-  border-radius: 16px;
-  overflow: hidden;
-  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   transition: transform 0.3s ease;
 }
 
 .teamcard-body:hover {
-  transform: scale(1.05);
+  transform: translateY(-5px);
 }
 
 .teamcard-img {
-  width: 100%;
-  height: 100%;
+  width: 330px;
+  height: 330px;
+  border-radius: 50%;
   object-fit: cover;
-  border-radius: 16px;
-  transition: opacity 0.4s ease;
+  transition: border-color 0.3s ease, transform 0.3s ease;
 }
 
-/* Overlay */
-.teamcard-overlay {
+.portfolio-btn {
+  width: 60%;
+  padding: 15px;
+  color: black;
+  background-color: white;
+  border: 0.09rem solid black;
+  cursor: pointer;
+  text-align: center;
+  margin-top: 5px;
+  border-radius: 8px;
+  position: relative;
+  font-size: medium;
+  font-weight: 600;
+  z-index: 1;
+  transition: var(--trans);
+  overflow: hidden;
+  text-decoration: none;
+}
+
+.portfolio-btn::before {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
+  background-color: black;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  opacity: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: opacity 0.4s ease;
+  transform: translate(-100%);
+  transition: var(--trans);
 }
 
-/* Show overlay when hover */
-.teamcard-body:hover .teamcard-overlay {
-  opacity: 1;
+.portfolio-btn:hover:before {
+  transform: translate(0);
+  z-index: -1;
 }
 
-/* Button */
-.teamcard-btn {
-  background-color: purple;
+.portfolio-btn:hover {
   color: white;
-  border: none;
-  padding: 12px 24px;
-  border-radius: 8px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: all 0.3s ease;
 }
 
-.teamcard-btn:hover {
-  background-color: rgb(223, 41, 223);
-  transform: scale(1.1);
+/* Portfolio 1 */
+.portfolio1-main-div {
+  margin-top: var(--margin-top);
+  margin-bottom: 10vh;
+  background-color: #d2aef4;
+  border-radius: 25px;
+  display: flex;
+  gap: 2rem;
+}
+
+.portfolio1-img-div img {
+  margin: 20px 0px;
+  border-radius: 20px;
+  width: 500px;
+  height: 600px;
+  border: 5px solid white;
+}
+
+.portfolio1-text {
+  margin-top: 4rem;
+}
+
+.portfolio1-text h1 {
+  font-size: 3.5rem;
+}
+
+.portfolio1-text h2 {
+  font-size: 1.8rem;
+}
+
+.portfolio1-text p {
+  font-size: 1.2rem;
 }
 
 /* TattooCategory */
@@ -541,6 +579,8 @@ nav {
   height: 350px;
   width: 300px;
   border-radius: 15px;
+  border: 2px solid black;
+  object-fit: cover;
   /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); */
   box-shadow: 1px 3px 36px -9px rgba(0, 0, 0, 0.46);
 }
@@ -951,6 +991,10 @@ nav {
 }
 
 .card-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   will-change: transform, opacity;
   transform: translateZ(0);
 }
@@ -961,7 +1005,7 @@ nav {
 
 /* Contact us */
 .contact-section {
-  padding-top: 80px;
+  margin-top: var(--margin-top);
 }
 
 .contact-heading {
@@ -1113,17 +1157,21 @@ footer {
   color: white;
 }
 
+.social-media-icon {
+  width: 45px;
+}
+
 /* Scroll to Top button */
 .top-btn {
   font-size: 2rem;
-  width: 4rem;
-  height: 4rem;
+  width: 3.8rem;
+  height: 3.8rem;
   color: #fff;
   background-color: #c48afa;
   border-radius: 50%;
   position: fixed;
-  bottom: 7rem;
-  right: 1.6rem;
+  bottom: 5.5rem;
+  right: 1.1rem;
   z-index: 999;
   display: flex;
   justify-content: center;
@@ -1284,8 +1332,8 @@ footer {
 
 /* Whatsapp logo */
 .whatsapp-icon {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   cursor: pointer;
   position: fixed;
   bottom: 15px;
@@ -1296,4 +1344,130 @@ footer {
 
 .whatsapp-icon:hover {
   transform: scale(1.1);
+}
+
+/* Call button */
+.call-btn {
+  width: 50px;
+  border-radius: 50%;
+  height: 50px;
+  cursor: pointer;
+  position: fixed;
+  bottom: 90px;
+  right: 22px;
+  z-index: 1000;
+  transition: transform 0.3s ease;
+}
+
+.call-btn:hover {
+  transform: scale(1.1);
+}
+
+.nav-call-btn {
+  margin-right: 30px;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  color: #333;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.nav-call-btn:hover {
+  color: purple;
+  transform: scale(1.1); /* Slight zoom effect */
+}
+
+.call-btn-for-mobile {
+  display: none;
+}
+
+/* Testimonial Marquee */
+.testimonial-marquee-container {
+  margin: 60px auto;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  color: #fff;
+  border-radius: 10px;
+}
+
+.testimonial-heading {
+  font-size: 2.3rem;
+  margin-bottom: 30px;
+  /* text-transform: uppercase; */
+  color: black;
+  letter-spacing: 1px;
+}
+
+.marquee-wrapper {
+  overflow: hidden;
+  white-space: nowrap;
+  scroll-behavior: smooth;
+}
+
+.marquee-track {
+  display: inline-flex;
+}
+
+.testimonial-box {
+  width: 320px;
+  height: 450px;
+  box-shadow: 3px 36px -9px rgba(0, 0, 0, 0.46);
+  gap: 10px;
+  margin-left: 50px;
+  border: 2px solid rgb(150, 148, 148);
+  border-radius: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  cursor: pointer;
+}
+
+.testimonial-box .testimonial-img {
+  width: 100%;
+  height: 100%;
+  flex: 0 0 auto;
+  border-radius: 15px;
+  box-sizing: border-box;
+  display: inline-block;
+}
+
+.testimonial-controls {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 25px;
+}
+
+.testimonial-btn {
+  background: none;
+  border: 2px solid black;
+  color: black;
+  padding: 8px 14px;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 1.3rem;
+  transition: all 0.3s ease;
+}
+
+.testimonial-btn:hover {
+  background: black;
+  color: white;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .testimonial-box {
+    width: 280px;
+  }
+}
+
+/* Terms */
+.term-wrapper-div {
+  margin-top: var(--margin-top);
+  margin-bottom: 10vh;
+}
+
+/* Privacy-Policy */
+.privacy-wrapper-div {
+  margin-top: var(--margin-top);
+  margin-bottom: 10vh;
 }
