--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,9 @@ body {
   font-family: "SuisseIntl-Regular";
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;  */
+  -moz-osx-font-smoothing: grayscale; 
 }
 
 code {
